<resources>
    <string name="app_name">MyLoLHelper</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="KEY_USER_LOGGED_IN">user_logged_in</string>

    <!-- Facebook application ID and custom URL scheme (app ID prefixed by 'fb'). -->
    <string name="facebook_application_id" translatable="false">833758976835446</string>
    <string name="facebook_login_protocol_scheme" translatable="false">fb833758976835446</string>
    <string name="app_intro">Welcome to MyLoLHelper! Please, login using Google or Facebook account so that we can store your favorite Champions and Matches in the cloud. Or skip the login if you are not interested in this feature. Have fun! GG!</string>
    <string name="login">Login</string>
    <string name="skip_login">Skip Login</string>
    <string name="log_out">Log out</string>
    <string name="home">Home</string>
    <string name="all_champions">All Champions</string>
    <string name="favorite_champions">Favorite Champions</string>
    <string name="find_summoner">Find Summoner</string>
    <string name="favorite_matches">Favorite Matches</string>
    <string name="account">Account</string>
    <string name="champion_name">Champion Name</string>
    <string name="champion_info">Champion Info</string>
    <string name="attack">Attack</string>
    <string name="defence">Defence</string>
    <string name="magic">Magic</string>
    <string name="difficulty">Difficulty</string>
    <string name="champion_spells">Champion Spells</string>
    <string name="passive">Passive</string>
    <string name="q">Q</string>
    <string name="w">W</string>
    <string name="e">E</string>
    <string name="r_ultimate">R - Ultimate</string>
    <string name="champion_tips">Champion Tips</string>
    <string name="how_to_defeat">How to defeat</string>
    <string name="how_to_play">How to play</string>
    <string name="bla">Bla bla bla blal badlbddlb ldbdlfbldlb lbldbldbldbl</string>
    <string name="champion_items">Champion Items</string>
    <string name="view_items">view items</string>
    <string name="pro_builds_text">Click on the button below to go to ProBuilds.com and see the items that the professional players use in their training every day for this champion.</string>
    <string name="search_a_summoner">Search a Summoner</string>
    <string name="type_name_here">Type name here</string>
    <string name="search_summoner">Search Summoner</string>
    <string name="lvl">LVL:</string>
    <string name="show_match_history">Show Match History</string>
    <string name="status">Status:</string>
    <string name="lost">LOST</string>
    <string name="won">WON</string>
    <string name="stats">Stats</string>
    <string name="largest_multi_kill">Largest multi kill</string>
    <string name="damage_to_champions">Total damage dealt to Champions</string>
    <string name="total_damage_dealt">Total damage dealt</string>
    <string name="gold_earned">Gold Earned</string>
    <string name="total_heal">Total heal</string>
    <string name="show_details">Show Details</string>
    <string name="items_more_text">Click on the button below to open the detailed page of the match on the official League of Legends site.</string>
    <string name="items_more">Items and more</string>
    <string name="add_to_favorite">Add to Favorite</string>
    <string name="league_of_legends">League of Legends</string>
    <string name="search_champion">Search Champion</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="join_the_league_n_become_a_legend">JOIN THE LEAGUE\nBECOME A LEGEND</string>
    <string name="why_league_of_legends">Why League of Legends?</string>
    <string name="home_text">Because it\'s the best game ever!!!\nJoin the mystical world of League of Legends.\nBuild strong friendships and be part of one of the biggest communities of gamers in the world.</string>
    <string name="only_for_windows_and_osx">Only for Windows and OSX</string>
    <string name="play_for_free">Play for FREE</string>
    <string name="more_details">More details</string>
    <string name="trailer">Trailer</string>
    <string name="title">Title: OIN THE LEAGUE</string>
    <string name="because_it_s_the_best_game_ever">Because it\'s the best game ever!</string>
    <string name="go_to_lol_site">Go to LoL site.</string>
    <string name="something">Click. :D</string>
    <string name="open_trailer">Open trailer</string>
    <string name="insert_summoner_name">Insert Summoner Name</string>
    <string name="summoner_icon">Summoner Icon</string>
    <string name="summoner_name">Summoner Name</string>
    <string name="summoner_level">Summoner level</string>
    <string name="match_date">Match Date</string>
    <string name="match_status">Match status</string>
    <string name="match_date_icon">Match date icon</string>
    <string name="champion_icon">Champion Icon</string>
    <string name="match_type">Match type</string>
    <string name="largest_multi_kill_value">Largest multi kill value</string>
    <string name="total_damage_dealt_value">Total damage dealt value</string>
    <string name="damage_champion_value">Damage to champions value</string>
    <string name="gold_earned_value">Gold earned value</string>
    <string name="total_heal_value">Total heal value</string>
    <string name="go_to_probuilds_site">Go to ProBuilds site</string>
    <string name="add_to_favorite_button">Add to favorite button</string>
    <string name="search_button">Search button</string>
    <string name="home_icon">Home icon</string>
    <string name="all_champions_item">All champions item</string>
    <string name="favorite_champions_item">Favorite champions item</string>
    <string name="find_summoner_item">Find summoner item</string>
    <string name="favorite_matches_item">Favorite matches item</string>
    <string name="log_in_item">Log in item</string>
    <string name="log_out_item">Log out item</string>
    <string name="progress_bar">Progress bar</string>
    <string name="champion_splash_art">Champion splash art</string>
    <string name="champion_lore">Champion lore</string>
    <string name="difficulty_value">Difficulty value</string>
    <string name="magic_value">Magic value</string>
    <string name="defence_value">Defence value</string>
    <string name="attack_value">Attack value</string>
    <string name="dificulty_icon">Dificulty icon</string>
    <string name="magic_icon">Magic icon</string>
    <string name="defence_icon">Defence icon</string>
    <string name="attack_icon">Attack icon</string>
    <string name="passive_text">Passive text</string>
    <string name="q_text">Q text</string>
    <string name="w_text">W text</string>
    <string name="e_text">E text</string>
    <string name="r_text">R text</string>
    <string name="how_to_play_icon">How to play icon</string>
    <string name="how_to_play_text">How to play text</string>
    <string name="how_to_defeat_icon">How to defeat icon</string>
    <string name="how_to_defeat_text">How to defeat text</string>
    <string name="button_pro_builds">Go to pro builds site button</string>

</resources>
