<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/home"
            android:contentDescription="@string/home_icon"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/home" />
        <item
            android:id="@+id/all_champions"
            android:contentDescription="@string/all_champions_item"
            android:icon="@drawable/ic_tag_faces_black_24dp"
            android:title="@string/all_champions" />
        <item
            android:id="@+id/favorite_champions"
            android:contentDescription="@string/favorite_champions_item"
            android:icon="@drawable/ic_sentiment_very_satisfied_black_24dp"
            android:title="@string/favorite_champions" />
        <item
            android:id="@+id/find_summoner"
            android:contentDescription="@string/find_summoner_item"
            android:icon="@drawable/ic_person_pin_black_24dp"
            android:title="@string/find_summoner" />
        <item
            android:id="@+id/favorite_matches"
            android:contentDescription="@string/favorite_matches_item"
            android:icon="@drawable/ic_collections_bookmark_black_24dp"
            android:title="@string/favorite_matches" />
    </group>

    <item android:title="@string/account">
        <menu>
            <item
                android:id="@+id/login"
                android:contentDescription="@string/log_in_item"
                android:icon="@drawable/ic_person_add_black_24dp"
                android:title="@string/login" />
            <item
                android:id="@+id/log_out"
                android:contentDescription="@string/log_out_item"
                android:icon="@drawable/ic_exit_to_app_black_24dp"
                android:title="@string/log_out" />
        </menu>
    </item>

</menu>
