<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:elevation="2dp">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/iv_attack"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_margin="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:contentDescription="@string/attack_icon"
            android:src="@drawable/ic_sword"
            app:layout_constraintStart_toEndOf="@+id/textView13"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/iv_defence"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:contentDescription="@string/defence_icon"
            android:src="@drawable/ic_shield"
            app:layout_constraintStart_toEndOf="@+id/textView13"
            app:layout_constraintTop_toBottomOf="@+id/iv_attack" />

        <ImageView
            android:id="@+id/iv_magic"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:contentDescription="@string/magic_icon"
            android:src="@drawable/ic_magic"
            app:layout_constraintStart_toEndOf="@+id/textView13"
            app:layout_constraintTop_toBottomOf="@+id/iv_defence" />

        <ImageView
            android:id="@+id/iv_difficulty"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginBottom="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:contentDescription="@string/dificulty_icon"
            android:src="@drawable/ic_difficulty"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/textView13"
            app:layout_constraintTop_toBottomOf="@+id/iv_magic" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:contentDescription="@string/attack"
            android:text="@string/attack"
            app:layout_constraintBottom_toBottomOf="@+id/iv_attack"
            app:layout_constraintStart_toEndOf="@+id/iv_attack"
            app:layout_constraintTop_toTopOf="@+id/iv_attack" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:contentDescription="@string/defence"
            android:text="@string/defence"
            app:layout_constraintBottom_toBottomOf="@+id/iv_defence"
            app:layout_constraintStart_toEndOf="@+id/iv_defence"
            app:layout_constraintTop_toTopOf="@+id/iv_defence" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:contentDescription="@string/magic"
            android:text="@string/magic"
            app:layout_constraintBottom_toBottomOf="@+id/iv_magic"
            app:layout_constraintStart_toEndOf="@+id/iv_magic"
            app:layout_constraintTop_toTopOf="@+id/iv_magic" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:contentDescription="@string/difficulty"
            android:text="@string/difficulty"
            app:layout_constraintBottom_toBottomOf="@+id/iv_difficulty"
            app:layout_constraintStart_toEndOf="@+id/iv_difficulty"
            app:layout_constraintTop_toTopOf="@+id/iv_difficulty" />

        <android.support.constraint.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="228dp" />

        <TextView
            android:id="@+id/tv_attack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:contentDescription="@string/attack_value"
            app:layout_constraintBottom_toBottomOf="@+id/textView2"
            app:layout_constraintStart_toStartOf="@+id/guideline"
            app:layout_constraintTop_toTopOf="@+id/textView2"
            tools:text="110" />

        <TextView
            android:id="@+id/tv_defence"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:contentDescription="@string/defence_value"
            app:layout_constraintBottom_toBottomOf="@+id/textView3"
            app:layout_constraintStart_toStartOf="@+id/guideline"
            app:layout_constraintTop_toTopOf="@+id/textView3"
            tools:text="120" />

        <TextView
            android:id="@+id/tv_magic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:contentDescription="@string/magic_value"
            app:layout_constraintBottom_toBottomOf="@+id/textView7"
            app:layout_constraintStart_toStartOf="@+id/guideline"
            app:layout_constraintTop_toTopOf="@+id/textView7"
            tools:text="130" />

        <TextView
            android:id="@+id/tv_difficulty"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:contentDescription="@string/difficulty_value"
            app:layout_constraintBottom_toBottomOf="@+id/textView8"
            app:layout_constraintStart_toStartOf="@+id/guideline"
            app:layout_constraintTop_toTopOf="@+id/textView8"
            tools:text="140" />

        <TextView
            android:id="@+id/textView13"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:contentDescription="@string/champion_info"
            android:text="@string/champion_info"
            android:textStyle="bold|italic"
            android:textColor="@android:color/black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </android.support.constraint.ConstraintLayout>
</android.support.v7.widget.CardView>