<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="16dp"
    android:layout_marginBottom="16dp"
    android:elevation="2dp">
    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/textView15"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:contentDescription="@string/champion_spells"
            android:text="@string/champion_spells"
            android:textColor="@android:color/black"
            android:textStyle="bold|italic"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView14"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:contentDescription="@string/passive"
            android:text="@string/passive"
            android:textStyle="italic"
            app:layout_constraintStart_toStartOf="@+id/textView15"
            app:layout_constraintTop_toBottomOf="@+id/textView15" />

        <TextView
            android:id="@+id/tv_passive"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="8dp"
            android:contentDescription="@string/passive_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/textView15"
            app:layout_constraintTop_toBottomOf="@+id/textView14"
            tools:text="Passive text bla bla bla" />

        <TextView
            android:id="@+id/textView17"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:contentDescription="@string/q"
            android:text="@string/q"
            android:textStyle="italic"
            app:layout_constraintStart_toStartOf="@+id/textView15"
            app:layout_constraintTop_toBottomOf="@+id/tv_passive" />

        <TextView
            android:id="@+id/tv_q"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="8dp"
            android:contentDescription="@string/q_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/textView15"
            app:layout_constraintTop_toBottomOf="@+id/textView17"
            tools:text="Q text bla bla bla" />

        <TextView
            android:id="@+id/textView19"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:contentDescription="@string/w"
            android:text="@string/w"
            app:layout_constraintStart_toStartOf="@+id/textView15"
            app:layout_constraintTop_toBottomOf="@+id/tv_q" />

        <TextView
            android:id="@+id/tv_w"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="8dp"
            android:contentDescription="@string/w_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/textView15"
            app:layout_constraintTop_toBottomOf="@+id/textView19"
            tools:text="W text bla bla bla" />

        <TextView
            android:id="@+id/textView21"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:contentDescription="@string/e"
            android:text="@string/e"
            android:textStyle="italic"
            app:layout_constraintStart_toStartOf="@+id/textView15"
            app:layout_constraintTop_toBottomOf="@+id/tv_w" />

        <TextView
            android:id="@+id/tv_e"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="8dp"
            android:contentDescription="@string/e_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/textView15"
            app:layout_constraintTop_toBottomOf="@+id/textView21"
            tools:text="E text bla bla bla" />

        <TextView
            android:id="@+id/textView23"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/r_ultimate"
            android:contentDescription="@string/r_ultimate"
            android:textStyle="italic"
            app:layout_constraintStart_toStartOf="@+id/textView15"
            app:layout_constraintTop_toBottomOf="@+id/tv_e" />

        <TextView
            android:id="@+id/tv_r"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="8dp"
            android:contentDescription="@string/r_text"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/textView15"
            app:layout_constraintTop_toBottomOf="@+id/textView23"
            tools:text="R text bla bla bla. Ultimate power!!!" />

    </android.support.constraint.ConstraintLayout>
</android.support.v7.widget.CardView>