<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:elevation="4dp"
    android:layout_margin="16dp"
    xmlns:tools="http://schemas.android.com/tools">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:layout_margin="16dp">

        <ImageView
            android:id="@+id/iv_profile_icon"
            android:layout_width="128dp"
            android:layout_height="128dp"
            android:layout_marginBottom="16dp"
            android:contentDescription="@string/summoner_icon"
            tools:src="@drawable/ic_person_add_black_24dp"/>

        <TextView
            android:id="@+id/tv_summoner_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:contentDescription="@string/summoner_name"
            tools:text="Summoner Name" />

        <TextView
            android:id="@+id/tv_level"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/summoner_level"
            android:layout_marginBottom="16dp"
            tools:text="LVL"/>

        <Button
            android:id="@+id/bt_match_history"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/show_match_history"
            android:contentDescription="@string/show_match_history"/>

    </LinearLayout>

</android.support.v7.widget.CardView>